package es.us.meerkat.backend.entity;

public enum RolComunidad {
  ADMIN,
  MIEMBRO
}
