package es.us.meerkat.backend.entity;

public enum TipoPlan {
    FREE,
    PREMIUM
}
