package es.us.meerkat.backend.entity;

public enum TipoPlanComunidad {
  FREE,
  PREMIUM
}
