@startuml Diagrama_Clases_MVP_Simple
!theme plain
skinparam classAttributeIconSize 0
hide empty members
skinparam class {
    BackgroundColor LightGreen
}

title Diagrama de Clases - MeerKatters (MVP - Solo Objetos)

' ============ ENUMS ============
enum TipoPlan
enum TipoGrupo
enum TipoPlanComunidad
enum EstadoComunidad
enum RolComunidad
enum EstadoSolicitud
enum EstadoAsistencia
enum TipoTransaccion
enum EstadoTransaccion
enum EstadoInvitacion

' ============ CLASES MVP ============
class Usuario
class Tutor
class Comunidad
class ClassroomAssociation
class MiembroComunidad
class SolicitudComunidad
class Evento
class AsistenciaEvento
class InvitacionEvento
class ArchivoAdjunto
class TransaccionPago
class Categoria
class Suscripcion
class Institucion

' ============ RELACIONES ============

' Usuario relaciones
Usuario "1" -- "0..1" Tutor : tiene perfil >
Usuario "1" -- "0..*" MiembroComunidad : pertenece a >
Usuario "1" -- "0..1" Suscripcion : tiene >
Usuario "1" -- "0..*" Evento : crea >
Usuario "1" -- "0..*" AsistenciaEvento : asiste a >
Usuario "1" -- "0..*" ArchivoAdjunto : adjunta >
Usuario "1" -- "0..*" TransaccionPago : realiza >
Usuario "1" -- "0..*" SolicitudComunidad : solicita >

' Tutor relaciones
Tutor "0..*" -- "0..*" Comunidad : contratado por >
Tutor "1" -- "0..*" TransaccionPago : recibe pagos >
Tutor "1" -- "0..1" ClassroomAssociation : propietario >

' Comunidad relaciones
Comunidad "1" -- "0..*" MiembroComunidad : tiene miembros >
Comunidad "1" -- "1" Usuario : creada por >
Comunidad "1" -- "0..*" Evento : contiene >
Comunidad "1" -- "0..*" ArchivoAdjunto : almacena >
Comunidad "1" -- "0..*" Categoria : organiza >
Comunidad "1" -- "0..*" SolicitudComunidad : recibe >
Comunidad "0..1" -- "0..1" ClassroomAssociation : tiene >
Comunidad "0..*" -- "0..1" Institucion : pertenece a >

' Evento relaciones
Evento "1" -- "0..*" AsistenciaEvento : tiene >
Evento "1" -- "0..*" InvitacionEvento : invita a >
Evento "0..1" -- "0..*" ArchivoAdjunto : asocia >
InvitacionEvento "0..*" -- "1" Usuario : invita a >

' Otras relaciones
ArchivoAdjunto "0..*" -- "0..1" Categoria : pertenece a >
SolicitudComunidad "0..1" -- "0..1" Usuario : respondida por >

@enduml
